# AI-Conference-Paper-Crawler

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  run.sh  scrapy.cfg
ai_conference_paper_crawler/: items.py  pipelines.py  registry.py  settings.py
ai_conference_paper_crawler/monitor/: __init__.py  __main__.py  collector.py  metrics.py  terminal.py  tui.py  web.py
ai_conference_paper_crawler/services/: __init__.py  mysql_service.py
ai_conference_paper_crawler/spiders/: cvf.py  ieee.py
ai_conference_paper_crawler/utils/: __init__.py  links.py
tests/: test_cvf_spider.py  test_ieee_spider.py  test_registry.py
