[project]
name = "ai-conference-paper-crawler"
version = "0.2.0"
description = "A Scrapy-based crawler for downloading AI conference papers (CVF/CVPR and more)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.1",
    "rich>=15.0.0",
    "scrapy>=2.11",
]

[project.urls]
Homepage = "https://github.com/AI-Huang/AI-Conference-Paper-Crawler"
Repository = "https://github.com/AI-Huang/AI-Conference-Paper-Crawler"

[project.scripts]
crawl-monitor = "ai_conference_paper_crawler.monitor.tui:main"
crawl-monitor-web = "ai_conference_paper_crawler.monitor.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_conference_paper_crawler"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
